--- a/src/app/entrepreneur-intro/entrepreneur-intro.component.html
+++ b/src/app/entrepreneur-intro/entrepreneur-intro.component.html
@@ -49,7 +49,7 @@
   </div>
 
   <!-- Right: Newsletter -->
-  <div class="newsletter-container">
+  <!-- <div class="newsletter-container">
     <div class="newsletter-content">
       <h2 class="newsletter-title">Subscribe to Our Newsletter</h2>
       <p class="newsletter-text">
@@ -67,4 +67,4 @@
       <img src="assets/headerimage/newsletter.png" alt="Newsletter Illustration" />
     </div>
   </div>
-</div>
+</div> -->
