--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -362,7 +362,7 @@
   cursor: pointer;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -46px;
   transition: transform 0.3s ease-in-out;
-  border: 1px solid #ccc;
+  border: 1px solid #ddd;
 
 }
 
