--- a/src/app/lab/Research_Centre_For_PLM/PLM.component.html
+++ b/src/app/lab/Research_Centre_For_PLM/PLM.component.html
@@ -1,10 +1,10 @@
-<!-- Main PLM Research Center Content -->
+<!-- plm.html -->
 <div class="im-container">
   <h1>Research Center For PLM</h1>
 
   <!-- Section 1: Image left, content right -->
   <section class="im-section">
-    <img src="assets\labs\PLM\Picture1.jpg" alt="PLM Research Center Overview">
+    <img src="assets/labs/PLM/Picture1.jpg" alt="PLM Research Center Overview">
     <div class="im-content">
       <h2>Overview</h2>
       <p>
@@ -24,7 +24,7 @@
 
   <!-- Section 2: Image right, content left -->
   <section class="im-section reverse">
-    <img src="assets\labs\PLM\Picture2.jpg" alt="PLM Services Offered">
+    <img src="assets/labs/PLM/Picture2.jpg" alt="PLM Services Offered">
     <div class="im-content">
       <h2>Services Offered</h2>
       <ul>
@@ -36,30 +36,35 @@
     </div>
   </section>
 
-  <!-- Section 3: Image right, content left -->
-  <section class="im-section reverse section-3">
+  <!-- Section 3: Competency & Tools -->
+  <!-- <section class="im-section section-3 reverse">
+    <img src="assets/labs/PLM/PLM_Lab3.jpg" alt="PLM Skills & Tools">
     <div class="im-content">
       <h2>Competency & Tools</h2>
 
-      <h3>COMPETENCY & SKILLS</h3>
-      <ul>
-        <li>3D Modelling</li>
-        <li>C#</li>
-        <li>3D Product Designer</li>
-        <li>Shader Graph Rigging</li>
-        <li>Cinematics</li>
-        <li>Animations</li>
-      </ul>
-
-      <h3>SOFTWARE TOOLS</h3>
-      <ul>
-        <li>Unity 3D</li>
-        <li>Blender</li>
-        <li>Meta Spatial Editor</li>
-        <li>Snap AR</li>
-        <li>Web XR</li>
-      </ul>
+      <div class="lists-container">
+        <div class="list-column">
+          <h3>Competency & Skills</h3>
+          <ul>
+            <li>3D Modelling</li>
+            <li>C#</li>
+            <li>3D Product Designer</li>
+            <li>Shader Graph Rigging</li>
+            <li>Cinematics</li>
+            <li>Animations</li>
+          </ul>
+        </div>
+        <div class="list-column">
+          <h3>Software Tools</h3>
+          <ul>
+            <li>Unity 3D</li>
+            <li>Blender</li>
+            <li>Meta Spatial Editor</li>
+            <li>Snap AR</li>
+            <li>Web XR</li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <img src="assets/labs/plm/PLM_Lab3.jpg" alt="PLM Skills & Tools">
   </section>
-</div>
+</div> -->
