--- a/src/app/lab/inovative_manufacturing/IM.component.html
+++ b/src/app/lab/inovative_manufacturing/IM.component.html
@@ -1,4 +1,4 @@
-<!-- Main Smart Factory Content -->
+
 <div class="im-container">
   <h1>Innovative Manufacturing</h1>
 
@@ -21,9 +21,9 @@
 
   <!-- Section 2: Image right, content left -->
   <section class="im-section reverse">
-    <img src="assets/labs/smartfactory/Inpection line.jpg" alt="Inspection Line">
+    <img src="assets/labs/smartfactory/collaborative.jpg" alt="IM">
     <div class="im-content">
-      <h2>Technologies</h2>
+      <h2>Services Offered</h2>
       <ul>
         <li>Additive MFR</li>
         <li>3D Metal Printing</li>
@@ -31,22 +31,28 @@
     </div>
   </section>
 
-  <!-- Section 3: Image right, content left -->
-  <section class="im-section reverse section-3">
+  <!-- Section 3: Image left, content right -->
+  <section class="im-section">
+    <img src="assets/labs/smartfactory/collaborative Robots.jpg" alt="Collaborative Robots">
     <div class="im-content">
       <h2>Skills & Tools</h2>
-      <h3>Skills</h3>
-      <ul>
-        <li>3D Printing</li>
-        <li>3D Scanning</li>
-        <li>Reverse Engineering</li>
-      </ul>
-      <h3>Tools</h3>
-      <ul>
-        <li>NX CAD</li>
-        <li>Handheld Scanner</li>
-      </ul>
+      <div class="lists-container">
+        <div class="list-column">
+          <h3>Skills</h3>
+          <ul>
+            <li>3D Printing</li>
+            <li>3D Scanning</li>
+            <li>Reverse Engineering</li>
+          </ul>
+        </div>
+        <div class="list-column">
+          <h3>Tools</h3>
+          <ul>
+            <li>NX CAD</li>
+            <li>Handheld Scanner</li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <img src="assets/labs/smartfactory/collaborative Robots.jpg" alt="Collaborative Robots">
   </section>
 </div>
