--- a/src/app/deep-drive/deep-drive.css
+++ b/src/app/deep-drive/deep-drive.css
@@ -66,8 +66,8 @@
 }
 .timeline-step.active,
 .timeline-step:hover {
-  background: #fff0f4;
-  box-shadow: 0 2px 10px #e6005740;
+  background: #95DBF8;
+  box-shadow: 0 2px 10px #95DBF8;
   font-weight: 700;
 }
 .step-circle {
@@ -115,7 +115,7 @@
   padding: 38px 36px;
   min-width: 420px;
   max-width: 670px;
-  box-shadow: 0 8px 36px #E6005720;
+  box-shadow: 0 8px 36px #95DBF8;
 }
 .timeline-detail-title {
   font-size: 1.23rem;
@@ -141,7 +141,7 @@
   margin: 10px 0 16px 0;
 }
 .spec-sheet-btn {
-  background: #fff0f4;
+  background: #95DBF8;
   color: #00569A;
   border: 1px solid #00569A;
   border-radius: 18px;
