--- a/src/app/homepage/homesolution/homesolution.component.html
+++ b/src/app/homepage/homesolution/homesolution.component.html
@@ -77,7 +77,7 @@
       </p>
     </div>
     <div class="section-image">
-      <img src="/assets/images/tansam-services.jpeg" alt="TANSAM Services" />
+      <img src="assets/mainimage/Tansam_homepage.jpg" alt="TANSAM Services" />
     </div>
   </div>
 
