--- a/src/app/homepage/partners/partners.component.html
+++ b/src/app/homepage/partners/partners.component.html
@@ -1,6 +1,6 @@
 <section class="clientsec">
   <div class="clients">
-    <h2>Industrial Clients</h2>
+    <h2>Industry Clients</h2>
   </div>
   <div class="logo-slider scroll-left">
     <div class="logos-slide">
