--- a/src/app/newspaper/newspaper.component.css
+++ b/src/app/newspaper/newspaper.component.css
@@ -5,7 +5,7 @@
     text-align: center;
     font-size: 18px;
     font-family: "Afacad Flux", serif;
-    color: #009999;
+    color: #00569a;
 }
 
 /* Gallery Grid */
